# Self_RAG

./: .gitignore  1_self_RAG_step_1.ipynb  2_Self_RAG_step_2.ipynb  3_self_RAG_step_3.ipynb  main.py  pyproject.toml  requirements.txt
